--- a/registry/build.xml
+++ b/registry/build.xml
@@ -8,6 +8,7 @@
         <path refid="servlet.path" />
 		<path refid="jpa.path" />
 		<path refid="ecosystemguard-domain.path" />
+		<path refid="ecosystemguard-engine.path" />
     </path>
 	
 	<target name="all" depends="clean, compile, war"/>
@@ -26,8 +27,8 @@
 		<mkdir dir="${lib.dir}"/>
 		<war destfile="${lib.dir}/${ant.project.name}.war" webxml="${resources.dir}/web.xml">
 			<classes dir="${classes.dir}"/>
-			<classes dir="${resources.dir}/classes"/>
 			<lib file="${ecosystemguard-domain.lib}"/>
+			<lib file="${ecosystemguard-engine.lib}"/>
 		</war>
 	</target>
 	
