--- a/domain/build.xml
+++ b/domain/build.xml
@@ -17,7 +17,7 @@
 	
 	<target name="compile">
 	    <mkdir dir="${classes.dir}"/>
-	    <javac srcdir="src" destdir="${classes.dir}" includeantruntime="false" classpathref="classpath"/>
+	    <javac srcdir="src" destdir="${classes.dir}" debug="true" includeantruntime="false" classpathref="classpath"/>
 	</target>
 	
 	<target name="jar">
