--- a/engine/build.xml
+++ b/engine/build.xml
@@ -7,7 +7,7 @@
 	<path id="classpath">
         <path refid="servlet.path" />
 		<path refid="jpa.path" />
-    </path>
+    	</path>
 	
 	<target name="all" depends="clean, compile, jar"/>
 	
@@ -18,7 +18,7 @@
 	
 	<target name="compile">
 	    <mkdir dir="${classes.dir}"/>
-	    <javac srcdir="src" destdir="${classes.dir}" includeantruntime="false" classpathref="classpath"/>
+	    <javac srcdir="src" destdir="${classes.dir}" debug="true" includeantruntime="false" classpathref="classpath"/>
 	</target>
 	
 	<target name="jar">
