--- a/registry/build.xml
+++ b/registry/build.xml
@@ -20,7 +20,7 @@
 	
 	<target name="compile">
 	    <mkdir dir="${classes.dir}"/>
-	    <javac srcdir="src" destdir="${classes.dir}" includeantruntime="false" classpathref="classpath"/>
+	    <javac srcdir="src" destdir="${classes.dir}" debug="true" includeantruntime="false" classpathref="classpath"/>
 	</target>
 	
 	<target name="war">
