--- a/engine/build.xml
+++ b/engine/build.xml
@@ -7,6 +7,7 @@
 	<path id="classpath">
         <path refid="servlet.path" />
 		<path refid="jpa.path" />
+		<path refid="ecosystemguard-domain.path" />
     	</path>
 	
 	<target name="all" depends="clean, compile, jar"/>
