--- a/registry/.classpath
+++ b/registry/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/httpclient/httpcomponents-client-4.2.3/lib/commons-codec-1.6.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/httpclient/httpcomponents-client-4.2.3/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/persistence/lib/ecosystemguard-persistence.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
