--- a/persistence/build.xml
+++ b/persistence/build.xml
@@ -14,6 +14,7 @@
 	<target name="clean">
 		<delete dir="${build.dir}"/>
 		<delete dir="${lib.dir}"/>
+		<delete dir="${bin.dir}"/>
 	</target>
 	
 	<target name="compile">
