--- a/build-tools/build.xml
+++ b/build-tools/build.xml
@@ -10,17 +10,29 @@
 		<delete dir="${build.dir}"/>
 	</target>
 	
+	<target name="clean-all">
+		<ant dir="${ecosystemguard-common.dir}" target="clean" />
+		<ant dir="${ecosystemguard-domain.dir}" target="clean" />
+		<ant dir="${ecosystemguard-persistence.dir}" target="clean" />
+		<ant dir="${ecosystemguard-engine.dir}" target="clean" />
+		<ant dir="${ecosystemguard-registry.dir}" target="clean" />
+		<ant dir="${ecosystemguard-hostmanager.dir}" target="clean" />
+	</target>
+	
 	<target name="compile">
+		<ant dir="${ecosystemguard-common.dir}" target="all" />
 		<ant dir="${ecosystemguard-domain.dir}" target="all" />
 		<ant dir="${ecosystemguard-persistence.dir}" target="all" />
 		<ant dir="${ecosystemguard-engine.dir}" target="all" />
 		<ant dir="${ecosystemguard-registry.dir}" target="all" />
-		<!--<ant dir="${ecosystemguard-hostmanager.dir}" target="all" />-->
+		<ant dir="${ecosystemguard-hostmanager.dir}" target="all" />
 	</target>
 	
 	<target name="mpi">
+		<mkdir dir="${build.dir}"/>
 		<copy todir="${build.dir}">
 			 <fileset file="${ecosystemguard-registry.lib}"/>
+			 <fileset file="${ecosystemguard-hostmanager.zip}"/>
 		</copy>
 	</target>
 	
@@ -28,5 +40,6 @@
 		<copy todir="${env.JBOSS_DEPLOYMENT_DIR}">
 			 <fileset file="${ecosystemguard-registry.lib}"/>
 		</copy>
+		<unzip src="${ecosystemguard-hostmanager.zip}" dest="${env.HOST_DEPLOYMENT_DIR}"/>
 	</target>
 </project>
