--- a/hostmanager/build.xml
+++ b/hostmanager/build.xml
@@ -4,16 +4,21 @@
 
 	<include file="${env.PROJECT_DIR}/build-tools/project-definitions.xml"/>
 	
+	<property name="executable.name" value="hostmanager"/>
+	<property name="executable.class" value="com.ecosystem.guard.host.Manager"/>
+	
 	<path id="classpath">
 		<path refid="ecosystemguard-domain.path" />
-		<path refid="ecosystemguard-engine.path" />
+		<path refid="ecosystemguard-common.path" />
+		<path refid="httpcomponents.path" />
     	</path>
 	
-	<target name="all" depends="clean, compile, jar"/>
+	<target name="all" depends="clean, compile, jar, dependencies, executable"/>
 	
 	<target name="clean">
 		<delete dir="${build.dir}"/>
 		<delete dir="${lib.dir}"/>
+		<delete dir="${bin.dir}"/>
 	</target>
 	
 	<target name="compile">
@@ -22,10 +27,27 @@
 	</target>
 	
 	<target name="jar">
-		<mkdir dir="${lib.dir}"/>
-		<jar destfile="${lib.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
-			<fileset dir="${resources.dir}"/>
+		<mkdir dir="${lib.dir}/${lib.dir}"/>
+		<jar destfile="${lib.dir}/${lib.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+			<manifest>
+				<attribute name="Main-Class" value="com.ecosystem.guard.host.Manager"/>
+			</manifest>
 		</jar>
 	</target>
 	
+	<target name="dependencies">
+		<copy todir="${lib.dir}/${lib.dir}">
+			<fileset file="${ecosystemguard-domain.lib}"/>
+			<fileset file="${ecosystemguard-common.lib}"/>
+			<fileset file="${httpcomponents_dep_codec.lib}"/>
+			<fileset file="${httpcomponents_dep_logging.lib}"/>
+			<fileset file="${httpcomponents_core.lib}"/>
+			<fileset file="${httpcomponents_client.lib}"/>
+		</copy>
+	</target>
+	
+	<target name="executable">
+		<echo file="${lib.dir}/${executable.name}"><![CDATA[java -classpath ${lib.dir}/${ecosystemguard-hostmanager.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-common.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-domain.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_codec.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_logging.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_core.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_client.name} ${executable.class}]]></echo>
+		<zip basedir="${lib.dir}" destfile="${lib.dir}/${ant.project.name}.zip"></zip>
+	</target>
 </project>
