--- a/registry/build.xml
+++ b/registry/build.xml
@@ -17,6 +17,7 @@
 	<target name="clean">
 		<delete dir="${build.dir}"/>
 		<delete dir="${lib.dir}"/>
+		<delete dir="${bin.dir}"/>
 	</target>
 	
 	<target name="compile">
