--- a/engine/build.xml
+++ b/engine/build.xml
@@ -7,6 +7,8 @@
 	<path id="classpath">
         <path refid="servlet.path" />
 		<path refid="jpa.path" />
+		<path refid="commons-codec.path" />
+		<path refid="ecosystemguard-common.path" />
 		<path refid="ecosystemguard-domain.path" />
 		<path refid="ecosystemguard-persistence.path" />
     	</path>
