--- a/registry/src/resources/web.xml
+++ b/registry/src/resources/web.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
 	<servlet>
-        <servlet-name>RegistryService</servlet-name>
-        <servlet-class>com.ecosystem.guard.registry.RegistryService</servlet-class>
+        <servlet-name>RegisterService</servlet-name>
+        <servlet-class>com.ecosystem.guard.registry.RegisterService</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>RegistryService</servlet-name>
-        <url-pattern>/service</url-pattern>
+        <servlet-name>RegisterService</servlet-name>
+        <url-pattern>/register</url-pattern>
     </servlet-mapping>
 </web-app>
