--- a/hostmanager/build.xml
+++ b/hostmanager/build.xml
@@ -18,9 +18,12 @@
 	<target name="clean">
 		<delete dir="${build.dir}"/>
 		<delete dir="${lib.dir}"/>
-		<delete dir="${bin.dir}"/>
 	</target>
 	
+	<target name="clean-all" depends="clean">
+		<delete dir="${bin.dir}"/>
+	</target>
+
 	<target name="compile">
 	    <mkdir dir="${classes.dir}"/>
 	    <javac srcdir="src" destdir="${classes.dir}" debug="true" includeantruntime="false" classpathref="classpath"/>
@@ -47,7 +50,7 @@
 	</target>
 	
 	<target name="executable">
-		<echo file="${lib.dir}/${executable.name}"><![CDATA[java -classpath ${lib.dir}/${ecosystemguard-hostmanager.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-common.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-domain.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_codec.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_logging.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_core.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_client.name} ${executable.class} ./config]]></echo>
+		<echo file="${lib.dir}/${executable.name}"><![CDATA[java -classpath ${lib.dir}/${ecosystemguard-hostmanager.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-common.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-domain.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_codec.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_logging.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_core.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_client.name} ${executable.class} ./config %1]]></echo>
 		<zip basedir="${lib.dir}" destfile="${lib.dir}/${ant.project.name}.zip"></zip>
 	</target>
 </project>
