--- a/app/src/resources/web.xml
+++ b/app/src/resources/web.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+	<listener>
+	    <listener-class>com.ecosystem.guard.app.listener.ContextListener</listener-class>
+  	</listener>
 	<servlet>
-        <servlet-name>RegisterService</servlet-name>
-        <servlet-class>com.ecosystem.guard.registry.RegisterService</servlet-class>
+        <servlet-name>TakePictureService</servlet-name>
+        <servlet-class>com.ecosystem.guard.app.TakePictureService</servlet-class>
     </servlet>
-
     <servlet-mapping>
-        <servlet-name>RegisterService</servlet-name>
-        <url-pattern>/register</url-pattern>
+        <servlet-name>TakePictureService</servlet-name>
+        <url-pattern>/takepicture</url-pattern>
     </servlet-mapping>
 </web-app>
