--- a/build-tools/build.xml
+++ b/build-tools/build.xml
@@ -13,6 +13,7 @@
 	<target name="clean-all">
 		<ant dir="${ecosystemguard-common.dir}" target="clean-all" />
 		<ant dir="${ecosystemguard-domain.dir}" target="clean-all" />
+		<ant dir="${ecosystemguard-logging.dir}" target="clean-all" />
 		<ant dir="${ecosystemguard-persistence.dir}" target="clean-all" />
 		<ant dir="${ecosystemguard-engine.dir}" target="clean-all" />
 		<ant dir="${ecosystemguard-registry.dir}" target="clean-all" />
@@ -23,6 +24,7 @@
 	<target name="compile">
 		<ant dir="${ecosystemguard-common.dir}" target="all" />
 		<ant dir="${ecosystemguard-domain.dir}" target="all" />
+		<ant dir="${ecosystemguard-logging.dir}" target="all" />
 		<ant dir="${ecosystemguard-persistence.dir}" target="all" />
 		<ant dir="${ecosystemguard-engine.dir}" target="all" />
 		<ant dir="${ecosystemguard-registry.dir}" target="all" />
