--- a/registry/build.xml
+++ b/registry/build.xml
@@ -36,6 +36,7 @@
 			<lib file="${ecosystemguard-persistence.lib}"/>
 			<lib file="${ecosystemguard-engine.lib}"/>
 			<lib file="${ecosystemguard-common.lib}"/>
+			<lib file="${ecosystemguard-logging.lib}"/>
 			<lib file="${commons-codec.lib}"/>
 			<lib file="${httpcomponents_dep_logging.lib}"/>
 			<lib file="${httpcomponents_core.lib}"/>
