--- a/engine/build.xml
+++ b/engine/build.xml
@@ -10,6 +10,7 @@
 		<path refid="commons-codec.path" />
 		<path refid="httpcomponents.path" />
 		<path refid="ecosystemguard-common.path" />
+		<path refid="ecosystemguard-logging.path" />
 		<path refid="ecosystemguard-domain.path" />
 		<path refid="ecosystemguard-persistence.path" />
     	</path>
