--- a/app/.classpath
+++ b/app/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="PROJECT_DIR/engine/lib/ecosystemguard-engine.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/common/lib/ecosystemguard-common.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/camera/lib/ecosystemguard-camera.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/commons-codec/commons-codec-1.7/commons-codec-1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
