--- a/app/build.xml
+++ b/app/build.xml
@@ -37,6 +37,7 @@
 			<lib file="${ecosystemguard-engine.lib}"/>
 			<lib file="${ecosystemguard-common.lib}"/>
 			<lib file="${ecosystemguard-camera.lib}"/>
+			<lib file="${ecosystemguard-logging.lib}"/>
 			<lib file="${commons-codec.lib}"/>
 			<lib file="${httpcomponents_dep_logging.lib}"/>
 			<lib file="${httpcomponents_core.lib}"/>
