Minimizadas dependencias internas: common base, camera sin dependencias a domain

--- a/logging/.classpath
+++ b/logging/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/commons-codec/commons-codec-1.7/commons-codec-1.7.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/domain/lib/ecosystemguard-domain.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/common/lib/ecosystemguard-common.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
