--- a/registry/build.xml
+++ b/registry/build.xml
@@ -7,6 +7,7 @@
 	<path id="classpath">
         <path refid="servlet.path" />
 		<path refid="jpa.path" />
+		<path refid="ecosystemguard-common.path" />
 		<path refid="ecosystemguard-domain.path" />
 		<path refid="ecosystemguard-persistence.path" />
 		<path refid="ecosystemguard-engine.path" />
