- Cambios en la gestión de propiedades - Actualiación de IP pública como servicio timer.

--- a/app/.classpath
+++ b/app/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="var" path="PROJECT_DIR/common/lib/ecosystemguard-common.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/camera/lib/ecosystemguard-camera.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/commons-codec/commons-codec-1.7/commons-codec-1.7.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/logging/lib/ecosystemguard-logging.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
