--- a/phidgets/.classpath
+++ b/phidgets/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="test/src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="var" path="PROJECT_DIR/logging/lib/ecosystemguard-logging.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/phidget/phidget21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
