--- a/hostmanager/.classpath
+++ b/hostmanager/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/httpclient/httpcomponents-client-4.2.3/lib/httpclient-4.2.3.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/httpclient/httpcomponents-client-4.2.3/lib/httpcore-4.2.2.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/common/lib/ecosystemguard-common.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/phidgets/lib/ecosystemguard-phidgets.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/phidgets/phidget21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
