--- a/client/pc/.classpath
+++ b/client/pc/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/httpclient/httpcomponents-client-4.2.3/lib/httpclient-4.2.3.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/httpclient/httpcomponents-client-4.2.3/lib/httpcore-4.2.2.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/common/lib/ecosystemguard-common.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/camera/lib/ecosystemguard-camera.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
