--- a/client/pc/build.xml
+++ b/client/pc/build.xml
@@ -10,6 +10,7 @@
 	<path id="classpath">
 		<path refid="ecosystemguard-domain.path" />
 		<path refid="ecosystemguard-common.path" />
+		<path refid="ecosystemguard-camera.path" />
 		<path refid="httpcomponents.path" />
     	</path>
 	
@@ -42,6 +43,7 @@
 		<copy todir="${lib.dir}/${lib.dir}">
 			<fileset file="${ecosystemguard-domain.lib}"/>
 			<fileset file="${ecosystemguard-common.lib}"/>
+			<fileset file="${ecosystemguard-camera.lib}"/>
 			<fileset file="${httpcomponents_dep_codec.lib}"/>
 			<fileset file="${httpcomponents_dep_logging.lib}"/>
 			<fileset file="${httpcomponents_core.lib}"/>
