--- a/hostmanager/build.xml
+++ b/hostmanager/build.xml
@@ -11,6 +11,7 @@
 		<path refid="ecosystemguard-domain.path" />
 		<path refid="ecosystemguard-common.path" />
 		<path refid="ecosystemguard-phidgets.path" />
+		<path refid="ecosystemguard-logging.path" />
 		<path refid="httpcomponents.path" />
     	</path>
 	
@@ -42,6 +43,7 @@
 	<target name="dependencies">
 		<copy todir="${lib.dir}/${lib.dir}">
 			<fileset file="${ecosystemguard-domain.lib}"/>
+			<fileset file="${ecosystemguard-logging.lib}"/>
 			<fileset file="${ecosystemguard-common.lib}"/>
 			<fileset file="${ecosystemguard-phidgets.lib}" />
 			<fileset file="${httpcomponents_dep_codec.lib}"/>
@@ -53,7 +55,7 @@
 	</target>
 	
 	<target name="executable">
-		<echo file="${lib.dir}/${executable.name}"><![CDATA[java -classpath ${lib.dir}/${ecosystemguard-hostmanager.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-common.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-domain.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_codec.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_logging.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_core.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_client.name} ${executable.class} ./config %1]]></echo>
+		<echo file="${lib.dir}/${executable.name}"><![CDATA[sudo java -classpath ${lib.dir}/${ecosystemguard-hostmanager.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${ecosystemguard-common.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${ecosystemguard-logging.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${ecosystemguard-phidgets.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${ecosystemguard-domain.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${httpcomponents_dep_codec.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${httpcomponents_dep_logging.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${httpcomponents_core.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${httpcomponents_client.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${phidgets.name} ${executable.class} ./config %1]]></echo>
 		<zip basedir="${lib.dir}" destfile="${lib.dir}/${ant.project.name}.zip"></zip>
 	</target>
 </project>
