--- a/app/build.xml
+++ b/app/build.xml
@@ -40,7 +40,7 @@
 			<lib file="${ecosystemguard-common.lib}"/>
 			<lib file="${ecosystemguard-camera.lib}"/>
 			<lib file="${ecosystemguard-logging.lib}"/>
-			<lib file="${ecosystemguard-phidgets.path}"/>
+			<lib file="${ecosystemguard-phidgets.lib}"/>
 			<lib file="${phidgets.lib}"/>
 			<lib file="${commons-codec.lib}"/>
 			<lib file="${httpcomponents_dep_logging.lib}"/>
