--- a/client/pc/build.xml
+++ b/client/pc/build.xml
@@ -52,7 +52,8 @@
 	</target>
 	
 	<target name="executable">
-		<echo file="${lib.dir}/${executable.name}"><![CDATA[java -classpath ${lib.dir}/${ecosystemguard-pc-client.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-common.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-camera.name}${env.JAVA_SEPARATOR}${lib.dir}/${ecosystemguard-domain.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_codec.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_dep_logging.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_core.name}${env.JAVA_SEPARATOR}${lib.dir}/${httpcomponents_client.name} ${executable.class} %1]]></echo>
+		<echo file="${lib.dir}/${executable.name}"><![CDATA[java -classpath ${lib.dir}/${ecosystemguard-pc-client.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${ecosystemguard-common.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${ecosystemguard-camera.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${ecosystemguard-domain.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${httpcomponents_dep_codec.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${httpcomponents_dep_logging.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${httpcomponents_core.name}${env.JAVA_LINUX_SEPARATOR}${lib.dir}/${httpcomponents_client.name} ${executable.class} %1]]></echo>
+		<echo file="${lib.dir}/${executable.name}.bat"><![CDATA[java -classpath ${lib.dir}/${ecosystemguard-pc-client.name}${env.JAVA_WIN_SEPARATOR}${lib.dir}/${ecosystemguard-common.name}${env.JAVA_WIN_SEPARATOR}${lib.dir}/${ecosystemguard-camera.name}${env.JAVA_WIN_SEPARATOR}${lib.dir}/${ecosystemguard-domain.name}${env.JAVA_WIN_SEPARATOR}${lib.dir}/${httpcomponents_dep_codec.name}${env.JAVA_WIN_SEPARATOR}${lib.dir}/${httpcomponents_dep_logging.name}${env.JAVA_WIN_SEPARATOR}${lib.dir}/${httpcomponents_core.name}${env.JAVA_WIN_SEPARATOR}${lib.dir}/${httpcomponents_client.name} ${executable.class} %1]]></echo>
 		<zip basedir="${lib.dir}" destfile="${lib.dir}/${ant.project.name}.zip"></zip>
 	</target>
 </project>
