--- a/domain/.classpath
+++ b/domain/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/jboss/jboss/modules/javax/persistence/api/main/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
