--- a/hostmanager/.classpath
+++ b/hostmanager/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="var" path="PROJECT_DIR/common/lib/ecosystemguard-common.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/phidgets/lib/ecosystemguard-phidgets.jar"/>
 	<classpathentry kind="var" path="PROJECT_DIR/thirdparty/phidgets/phidget21.jar"/>
+	<classpathentry kind="var" path="PROJECT_DIR/logging/lib/ecosystemguard-logging.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
